--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-resource": "^1.5.3",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.9",
     "vuex": "^3.4.0"
